Added win/loss mechanic
First to 5 wins, added a game message and a new game button.

--- a/main.css
+++ b/main.css
@@ -33,6 +33,9 @@ img {
     gap: 75px;
 }
 .footer {
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
 }
 .buttons {
     display: flex;
