--- a/main.css
+++ b/main.css
@@ -4,6 +4,7 @@ html, body {
     align-items: center;
     height: 100vh;
     justify-content:space-between;
+    cursor: pointer;
 }
 img {
     width: 150px;
